--- a/app/src/main/res/layout/stepsfragmentcount.xml
+++ b/app/src/main/res/layout/stepsfragmentcount.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -12,6 +13,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+
 
             <androidx.cardview.widget.CardView
                 android:layout_marginTop="16dp"
@@ -391,12 +394,39 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="375dp"
+                android:foreground="@drawable/glass"
+                android:foregroundGravity="center">
+
+                <uk.co.barbuzz.beerprogressview.BeerProgressView
+                    android:id="@+id/beerProgressView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="98dp"
+                    android:layout_marginTop="30dp"
+
+                    android:layout_marginRight="94dp"
+                    android:layout_marginBottom="63dp"
+                    android:foregroundGravity="top|fill"
+                    app:beerColor="#00BCD4"
+                    app:beerProgress="100"
+                    app:bubbleColor="#FFFFFF"
+                    app:bubbleCount="12"
+                    app:waveAmplitude="3dp"
+                    app:waveMax="100" />
+
+            </LinearLayout>
 
 
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="64dp"/>
+
+
         </LinearLayout>
+
     </ScrollView>
 
 </FrameLayout>
