--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -7,31 +7,38 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".stepscounter.ListActivity"
-    android:screenOrientation="portrait">
+    android:screenOrientation="portrait"
+    >
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="1127dp"
+        android:orientation="vertical"
+        android:background="@color/colorBackground"
+        app:cardCornerRadius="8dp"
+        >
 
 
         <ListView
+            app:cardCornerRadius="8dp"
             android:id="@+id/list"
             style="@android:style/Widget.DeviceDefault.Light.ExpandableListView"
             android:layout_width="match_parent"
-            android:layout_height="672dp"
+            android:layout_height="727dp"
             android:layout_marginLeft="10dp"
-
             android:layout_marginTop="15dp"
             android:layout_marginRight="10dp"
+            android:background="@color/black"
             android:footerDividersEnabled="false"
             android:headerDividersEnabled="false"
             android:listSelector="@color/teal_200"
             android:orientation="vertical"
+            android:textSize="8sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.457"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.505" />
+            app:layout_constraintVertical_bias="0.505"
+            tools:ignore="SmallSp" />
     </LinearLayout>
 </ScrollView>
