--- a/app/src/main/res/layout/movie_item_list.xml
+++ b/app/src/main/res/layout/movie_item_list.xml
@@ -33,7 +33,7 @@
                 android:layout_height="match_parent">
 
                 <TextView
-                    android:id="@+id/textName"
+                    android:id="@+id/textViewDates"
                     android:textColor="#000"
                     android:textStyle="bold"
                     android:textSize="14sp"
@@ -43,7 +43,7 @@
                     android:layout_height="wrap_content"/>
 
                 <TextView
-                    android:id="@+id/textdate"
+                    android:id="@+id/textViewResults_total_steps"
                     android:layout_margin="10dp"
                     android:text="Movie Date"
                     android:layout_width="match_parent"
