--- a/app/src/main/res/layout/stepsfragmentcount.xml
+++ b/app/src/main/res/layout/stepsfragmentcount.xml
@@ -394,9 +394,10 @@
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
-                android:layout_width="353dp"
-                android:layout_height="60dp"
-                android:layout_marginStart="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:foregroundGravity="center">
 
                 <androidx.appcompat.widget.AppCompatButton
@@ -404,6 +405,7 @@
                     android:layout_width="75dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="7dp"
+                    android:layout_marginEnd="7dp"
                     android:text="@string/_0_25l" />
 
                 <androidx.appcompat.widget.AppCompatButton
@@ -411,6 +413,7 @@
                     android:layout_width="75dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="7dp"
+                    android:layout_marginEnd="7dp"
                     android:text="@string/_0_33l" />
 
                 <androidx.appcompat.widget.AppCompatButton
@@ -418,6 +421,7 @@
                     android:layout_width="75dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="7dp"
+                    android:layout_marginEnd="7dp"
                     android:text="@string/_0_5l" />
 
                 <androidx.appcompat.widget.AppCompatButton
@@ -426,6 +430,7 @@
                     android:layout_width="75dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="7dp"
+                    android:layout_marginEnd="7dp"
                     android:text="@string/_1l" />
 
 
@@ -452,20 +457,20 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="300dp"
-                android:layout_height="100dp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
                 android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:background="@drawable/ugli"
                 android:orientation="horizontal"
                 android:paddingTop="8dp"
-                android:textColor="@color/black"
 
-                >
+                android:textColor="@color/black">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="80dp"
 
                     android:text="@string/wasdrank"
                     android:textSize="18sp" />
@@ -474,7 +479,7 @@
                     android:id="@+id/textview_percebt_in_l"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="80dp"
                     android:ellipsize="end"
                     android:maxLines="2"
                     android:text="@string/_0"
